Added echo in revert migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
+            echo https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.Workflow_ID >>
             SUCCESS=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.Workflow_ID >>)
             # Logic for reverting the database state
             if (( $SUCCESS == 1 ));
